src/test/ui/pub/pub-restricted-error.stderr
error: expected identifier, found `(`
  --> $DIR/pub-restricted-error.rs:16:16
   |
16 |     pub(crate) () foo: usize, //~ ERROR expected identifier
   |                ^ expected identifier

error: aborting due to previous error

